--- a/README.org
+++ b/README.org
@@ -1,33 +1,2 @@
-#+TITLE: osta (Org Static)
-#+AUTHOR: Tony aldon
-#+DATE: [2022-01-05 Wed]
-
-* About
-
-~osta~ (Org Static) provides few function/macros to build static websites
-using org-mode.
-
-* Goal
-
-- Have a few functions/macro that I understand and that allow me to
-  write content with org-mode and publish to the web.
-
-* Installation/Build
-
-- Emacs, org-mode, html template
-- htmlize.el (code highlighting)
-- browersync (hot-reloading)
-- lighthouse (performance)
-
-* structure
-
-#+BEGIN_SRC text
-public/
-  - 404/index.html
-  - about/index.html
-  - feed.xml
-  - index.html
-  - sitemap.xml
-content.org
-osta.el
-#+END_SRC
+~osta~ (Org Static) provides few functions to build static websites
+leveraging Emacs Lisp and org-mode.
